tests/integration/snapshots/integration__snapshot__obfuscation.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"obfuscation.yml\")).run()?"
snapshot_kind: text
---
error[obfuscation]: obfuscated usage of GitHub Actions features
  --> @@INPUT@@:12:9
   |
12 |       - uses: actions/checkout/@v4
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ actions reference contains empty component
   |
   = note: audit confidence → High

error[obfuscation]: obfuscated usage of GitHub Actions features
  --> @@INPUT@@:15:9
   |
15 |       - uses: actions/checkout////@v4
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actions reference contains empty component
   |
   = note: audit confidence → High

error[obfuscation]: obfuscated usage of GitHub Actions features
  --> @@INPUT@@:15:9
   |
15 |       - uses: actions/checkout////@v4
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actions reference contains empty component
   |
   = note: audit confidence → High

error[obfuscation]: obfuscated usage of GitHub Actions features
  --> @@INPUT@@:15:9
   |
15 |       - uses: actions/checkout////@v4
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actions reference contains empty component
   |
   = note: audit confidence → High

error[obfuscation]: obfuscated usage of GitHub Actions features
  --> @@INPUT@@:15:9
   |
15 |       - uses: actions/checkout////@v4
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actions reference contains empty component
   |
   = note: audit confidence → High

error[obfuscation]: obfuscated usage of GitHub Actions features
  --> @@INPUT@@:18:9
   |
18 |       - uses: github/codeql-action/./init@v2
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actions reference contains '.'
   |
   = note: audit confidence → High

error[obfuscation]: obfuscated usage of GitHub Actions features
  --> @@INPUT@@:19:9
   |
19 |       - uses: actions/checkout/.@v4
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ actions reference contains '.'
   |
   = note: audit confidence → High

error[obfuscation]: obfuscated usage of GitHub Actions features
  --> @@INPUT@@:22:9
   |
22 |       - uses: actions/cache/save/../save@v4
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actions reference contains '..'
   |
   = note: audit confidence → High

8 findings: 0 unknown, 0 informational, 0 low, 0 medium, 8 high
